# bwi_ros2_common

./: README.md
bwi_ros2_common/bwi_launch/: CMakeLists.txt  package.xml
bwi_ros2_common/bwi_launch/config/: laser_filter_config.yaml  nav_with_arm.rviz  rviz_config.rviz
bwi_ros2_common/bwi_launch/launch/: segbot_v2.launch.py  segbot_v4.launch.py
bwi_ros2_common/lidar/ros2_laser_scan_merger/: CMakeLists.txt  package.xml
bwi_ros2_common/lidar/ros2_laser_scan_merger/config/: params.yaml
bwi_ros2_common/lidar/ros2_laser_scan_merger/launch/: merge_2_scan.launch.py  visualize_merge_2_scan.launch.py
bwi_ros2_common/lidar/ros2_laser_scan_merger/src/: main.cpp
bwi_ros2_common/lidar/scan_filter/: package.xml  setup.cfg  setup.py
bwi_ros2_common/lidar/scan_filter/scan_filter/: scan_filter.py
bwi_ros2_common/lidar/urg_node2/config/: params_serial.yaml
bwi_ros2_common/lidar/velodyne/velodyne_laserscan/config/: default-velodyne_laserscan_node-params.yaml
bwi_ros2_common/nav2_bringup/launch/: augmented_map.py
bwi_ros2_common/nav2_bringup/maps/1/occ/: ahg_1.xcf  ahg_1_closed.pgm  ahg_1_closed.yaml  ahg_1_full.pgm  ahg_1_full.xcf  ahg_1_full.yaml  connectivity.yaml  cropped.pgm  cropped.yaml  doors.yaml  doors_map.pgm  doors_map.yaml  locations.pgm  locations.yaml
bwi_ros2_common/nav2_bringup/maps/1/occ/rooms/: ahg_1_0.pgm  ahg_1_0.yaml  ahg_1_220.pgm  ahg_1_220.yaml
bwi_ros2_common/nav2_bringup/maps/2/occ/: ahg.xcf  ahg_full.pgm  ahg_full.yaml  ahg_full_closed.pgm  ahg_full_closed.yaml  ahg_full_new.pgm  ahg_full_new.yaml  ahg_full_noelevator.pgm  ahg_full_open.pgm  ahg_full_open.yaml  connectivity.yaml  doors.yaml  doors_map.pgm  doors_map.yaml  locations.pgm  locations.yaml  new_ahg_full.pgm  new_ahg_full.yaml
bwi_ros2_common/nav2_bringup/maps/2/occ/rooms/: ahg_0.pgm  ahg_0.yaml  ahg_202.pgm  ahg_202.yaml  ahg_304.pgm  ahg_304.yaml
bwi_ros2_common/nav2_bringup/params/: nav2_params.yaml  old.yaml  working_localization.yaml
bwi_ros2_common/pr2_description/: CMakeLists.txt  package.xml
bwi_ros2_common/segbot_description/: CMakeLists.txt  package.xml
bwi_ros2_common/segbot_description/gazebo/: segbot.gazebo.xacro
bwi_ros2_common/segbot_description/robots/: segbot_v2.urdf.xacro  segbot_v4.urdf.xacro
bwi_ros2_common/segbot_description/test/: kinect_mount.test.xacro
bwi_ros2_common/segbot_description/urdf/: segbot_base.urdf.xacro  segbot_wheel.urdf.xacro
bwi_ros2_common/segbot_description/urdf/mounts/: hokuyo_mount.urdf.xacro
bwi_ros2_common/segbot_description/urdf/sensors/: hokuyo_laser.gazebo.xacro  hokuyo_laser.urdf.xacro
bwi_ros2_common/segway_description/: CMakeLists.txt  package.xml
